@@ -2376,7 +2376,7 @@ $wgAllowDisplayTitle = false ;
 $wgReservedUsernames = array(
 	'MediaWiki default', // Default 'Main Page' and MediaWiki: message pages
 	'Conversion script', // Used for the old Wikipedia software upgrade
-	'Maintenance script', // ... maintenance/edit.php uses this?
+	'Maintenance script', // Maintenance scripts which perform editing, image import script
 	'Template namespace initialisation script', // Used in 1.2->1.3 upgrade
 );
 
